applications/common/frontend/src/bulma-overwrite/colors.scss
/*!
 * <!--
 *     Copyright (C) 2023 Dynamic Solutions
 *
 *     Licensed under the Apache License, Version 2.0 (the "License");
 *     you may not use this file except in compliance with the License.
 *     You may obtain a copy of the License at
 *
 *         http://www.apache.org/licenses/LICENSE-2.0
 *
 *     Unless required by applicable law or agreed to in writing, software
 *     distributed under the License is distributed on an "AS IS" BASIS,
 *     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 *     See the License for the specific language governing permissions and
 *     limitations under the License.
 * -->
 */

@use 'src/atomic-design-system/00-token/t.color' as colors;

.has-text {
  &-primary {
    color: var(--color-primary--600) !important;
  }

  &-link {
    &-light {
      color: var(--color-primary--500) !important; /* !important used as in Bulma */
    }

    &-dark {
      color: var(--color-primary--700) !important; /* !important used as in Bulma */
    }
  }

  &-grey {
    color: var(--color-grey--600) !important; /* !important used as in Bulma */

    &-light {
      color: var(--color-grey--500) !important; /* !important used as in Bulma */
    }

    &-lighter {
      color: var(--color-grey--400) !important; /* !important used as in Bulma */
    }

    &-dark {
      color: var(--color-grey--700) !important; /* !important used as in Bulma */
    }

    &-darker {
      color: var(--color-grey--800) !important; /* !important used as in Bulma */
    }
  }

  &-info {
    color: var(--color-info--600) !important;

    &-light {
      color: var(--color-info--500) !important; /* !important used as in Bulma */
    }

    &-dark {
      color: var(--color-info--700) !important; /* !important used as in Bulma */
    }
  }

  &-success {
    color: var(--color-success--600) !important;

    &-light {
      color: var(--color-success--500) !important; /* !important used as in Bulma */
    }

    &-dark {
      color: var(--color-success--700) !important; /* !important used as in Bulma */
    }
  }

  &-warning {
    color: var(--color-warning--600) !important;

    &-light {
      color: var(--color-warning--500) !important; /* !important used as in Bulma */
    }

    &-dark {
      color: var(--color-warning--700) !important; /* !important used as in Bulma */
    }
  }

  &-danger {
    color: var(--color-danger--600) !important;

    &-light {
      color: var(--color-danger--500) !important; /* !important used as in Bulma */
    }

    &-dark {
      color: var(--color-danger--700) !important; /* !important used as in Bulma */
    }
  }
}

.has-background {
  &-primary {
    background-color: var(--color-primary--600) !important; /* !important used as in Bulma */
  }

  &-link {
    background-color: var(--color-link--600) !important; /* !important used as in Bulma */

    &-light {
      background-color: var(--color-link--500) !important; /* !important used as in Bulma */
    }

    &-dark {
      background-color: var(--color-link--700) !important; /* !important used as in Bulma */
    }
  }

  &-grey {
    background-color: var(--color-grey--600) !important; /* !important used as in Bulma */

    &-light {
      background-color: var(--color-grey--500) !important; /* !important used as in Bulma */
    }

    &-lighter {
      background-color: var(--color-grey--400) !important; /* !important used as in Bulma */
    }

    &-dark {
      background-color: var(--color-grey--700) !important; /* !important used as in Bulma */
    }

    &-darker {
      background-color: var(--color-grey--800) !important; /* !important used as in Bulma */
    }
  }

  &-info {
    background-color: var(--color-info--600) !important; /* !important used as in Bulma */

    &-light {
      background-color: var(--color-info--500) !important; /* !important used as in Bulma */
    }

    &-dark {
      background-color: var(--color-info--700) !important; /* !important used as in Bulma */
    }
  }

  &-success {
    background-color: var(--color-success--600) !important; /* !important used as in Bulma */

    &-light {
      background-color: var(--color-success--500) !important; /* !important used as in Bulma */
    }

    &-dark {
      background-color: var(--color-success--700) !important; /* !important used as in Bulma */
    }
  }

  &-warning {
    background-color: var(--color-warning--600) !important; /* !important used as in Bulma */

    &-light {
      background-color: var(--color-warning--500) !important; /* !important used as in Bulma */
    }

    &-dark {
      background-color: var(--color-warning--700) !important; /* !important used as in Bulma */
    }
  }

  &-danger {
    background-color: var(--color-danger--600) !important; /* !important used as in Bulma */

    &-light {
      background-color: var(--color-danger--500) !important; /* !important used as in Bulma */
    }

    &-dark {
      background-color: var(--color-danger--700) !important; /* !important used as in Bulma */
    }
  }
}

/*  inputs text colors */

.input, .select select, .textarea, .label  {
  color: var(--base-color-body-text, var(--color-grey--700));
  background-color: var(--base-color-secondary-background, var(--base-color-white));
}

.input::placeholder {
  color: var(--base-color-secondary-text, var(--color-grey--700));
}

.checkbox:hover, .radio:hover {
  color: var(--base-color-secondary-text, #363636)
}

